--- a/Tableau2.html
+++ b/Tableau2.html
@@ -349,12 +349,12 @@
 		<form id="form3">
 			<div>
 				<fieldset>
-					<legend> Couleur de Fond des cellules </legend>
+					<legend> Couleur de Fond <br/>des cellules </legend>
 					<h2></h2>
-					<label for="MybackgroundColor">Choose a color for background:&nbsp&nbsp</label><input id="MybackgroundColor" value="#880088" type="color" />
+					<label for="MybackgroundColor">Choose a color <br/>for background:&nbsp&nbsp</label><input id="MybackgroundColor" value="#880088" type="color" />
 					</br>
 					<BR/>
-					<INPUT type="button" value="insérer le backgrounde color dans la cellule" onClick="insertCouleurBkGrnd()">
+					<INPUT type="button" value="insert background color" onClick="insertCouleurBkGrnd()">
 				</fieldset>
 			</div>
 		</form>
