--- a/Tableau2.html
+++ b/Tableau2.html
@@ -42,28 +42,29 @@
 				font-size: 1.2em;
 				font-weight: bold;
 			}
-			#form1{
+			#fieldset1{
 				margin-top: 5px;
 				display: inline-block;
 				float: left;
-				width: 270px;
-				height: 50px;
+				width: 260px;
+//				height: 35px;
 			}
 			#PutTextInTable{
+				margin-left: 5px;
 				display: inline-block;
-				height: 50px;
+				height: 30px;
 				margin: 15px;
 			}
-			#form2{
+			#fieldset2{
 				margin-top: 5px;
 				display: inline-block;
 				vertical-align: top;
-				width:48.5%;
-				float: left;
+//				width:48.5%;
 				margin-right: 1px;
 			}
-			#form3{
+			#fieldset3{
 				margin-top: 5px;
+				display: inline-block;
 				vertical-align: top;
 			}
 		</style>
@@ -255,108 +256,100 @@
 			;
 		</script>
 
-		<form id="form1"> 
+		<fieldset id="fieldset1">
+			<legend> Données du tableau </legend>
 			<div>
-				<fieldset>
-				<legend> Données du tableau </legend>
 				<input type="text" size="6" id="Lig" placeholder="No Ligne" /> 
 				<input type="text" size="6" id="Col" placeholder="No Colonne" /> <br/><br/>
 				<textarea  rows="4" cols="28" onkeypress="if (event.keyCode==13){ MiseEnForme(); event.preventDefault(); return false; }" size="22" id="input01" placeholder="texte ou image à insérer" > </textarea>
-				</fieldset>
 			</div>
 			<div id="PutTextInTable">
 				<INPUT type="button" value="Put Text or Image in Table" onClick="MiseEnForme()">
 			</div>
-		</form> 
-		<form>
-		</form>
-		<form id="form2">
-			<fieldset>
-				<legend> Mise en forme des cellules </legend>
-				<div id="div1">
-					<div id="div2">
-						<div id="divGras">
-						<select id="EnGras">
-							<option value="bold" style="font-weight:bolder" >Gras</option>
-							<option value="normal">Normal</option>
-						</select>
-						<script> redimensionneListe("EnGras") </script>
-						</div>
-						<div id="divItalique">
-						<select id="EnItalique">
-							<option value="normal">Normal</option>
-							<option value="italic" style="font-style:oblique" >Italique</option>
-						</select>
-						<script> redimensionneListe("EnItalique") </script>
-						</div>
-						<div>
-						<select id="PoliceDeChar">
-							<option style="font-family: verdana" value="verdana">verdana</option>
-							<option style="font-family: Georgia" value="Georgia">Georgia</option>
-							<option style="font-family: serif" value="serif">serif</option>
-							<option style="font-family: Times New Roman" value="Times New Roman">Times New Roman</option>
-							<option style="font-family: Helvetica" value="Helvetica">Helvetica</option>
-							<option style="font-family: Arial" value="Arial">Arial</option>
-							<option style="font-family: Geneva" value="Geneva">Geneva</option>
-							<option style="font-family: Tahoma" value="Tahoma">Tahoma</option>
-							<option style="font-family: Impact" value="Impact">Impact</option>
-							<option style="font-family: Charcoal" value="Charcoal">Charcoal</option>
-						</select>
-						<script> redimensionneListe("PoliceDeChar",1.1) </script>
-						</div>
+		</fieldset>
+		<fieldset id="fieldset2">
+			<legend> Mise en forme des cellules </legend>
+			<div id="div1">
+				<div id="div2">
+					<div id="divGras">
+					<select id="EnGras">
+						<option value="bold" style="font-weight:bolder" >Gras</option>
+						<option value="normal">Normal</option>
+					</select>
+					<script> redimensionneListe("EnGras") </script>
 					</div>
-
-					<div id="div3">
-						<select id="Couleur">
-							<option value="red" style="background-color: red">Rouge</option>
-							<option value="green" style="background-color: green">Vert</option>
-							<option value="blue" style="background-color: blue; color : #ffffff">Bleu</option>
-							<option value="yellow" style="background-color: yellow;">Jaune</option>
-							<option value="fuchsia" style="background-color: fuchsia;">Fuchsia</option>
-							<option value="violet" style="background-color: violet;">Violet</option>
-							<option value="navy" style="background-color: navy; color : #ffffff">Navy</option>
-							<option value="aqua" style="background-color: aqua;" selected>Aqua</option>
-							<option value="olive" style="background-color: olive; color : #ffffff;" >Olive</option>
-							<option value="lime" style="background-color: lime;">Citron vert</option>
-							<option value="maroon" style="background-color: maroon; color : #ffffff">Maron</option>
-							<option value="teal" style="background-color: teal; color : #ffffff">Bleu Sarcelle</option>
-							<option value="#000000" style="background-color: #000000; color : #ffffff">Noir</option>
-							<option value="gray" style="background-color: gray; color : #ffffff">Gris</option>
-							<option value="silver" style="background-color: silver;">Gris Clair</option>
-							<option value="#ffffff" style="background-color: #ffffff">Blanc</option>
-						</select>
-						<script> redimensionneListe("Couleur") </script>
+					<div id="divItalique">
+					<select id="EnItalique">
+						<option value="normal">Normal</option>
+						<option value="italic" style="font-style:oblique" >Italique</option>
+					</select>
+					<script> redimensionneListe("EnItalique") </script>
 					</div>
-					<div id="div4">
-						<select id="TailleChar" style="margin: none">
-							<option value="2" style="font-size:0.66em">Très Petite Police</option>
-							<option value="3" style="font-size:1em">Petite Police</option>
-							<option value="4" style="font-size:1.33em">Police Normal</option>
-							<option value="5" style="font-size:1.66em" selected>Font size 4 </option>
-							<option value="6" style="font-size:2em">Font size 5 </option>
-							<option value="7" style="font-size:2.33em">Font size 6 </option>
-							<option value="8" style="font-size:2.67em">Font size 7 </option>
-							<option value="9" style="font-size:3em">Font size 8 </option>
-							<option value="10" style="font-size:3.33em">Font size 9 </option>
-						</select>
-						<script> document.getElementById("TailleChar").size = document.getElementById("TailleChar").options.length *2.9; </script>
-						<script> redimensionneListe("TailleChar",2.8) </script>
+					<div>
+					<select id="PoliceDeChar">
+						<option style="font-family: verdana" value="verdana">verdana</option>
+						<option style="font-family: Georgia" value="Georgia">Georgia</option>
+						<option style="font-family: serif" value="serif">serif</option>
+						<option style="font-family: Times New Roman" value="Times New Roman">Times New Roman</option>
+						<option style="font-family: Helvetica" value="Helvetica">Helvetica</option>
+						<option style="font-family: Arial" value="Arial">Arial</option>
+						<option style="font-family: Geneva" value="Geneva">Geneva</option>
+						<option style="font-family: Tahoma" value="Tahoma">Tahoma</option>
+						<option style="font-family: Impact" value="Impact">Impact</option>
+						<option style="font-family: Charcoal" value="Charcoal">Charcoal</option>
+					</select>
+					<script> redimensionneListe("PoliceDeChar",1.1) </script>
 					</div>
-					</br>
 				</div>
-			</fieldset>
-		</form>
-		<form id="form3">
-			<div>
-				<fieldset>
-					<legend> Couleur de Fond <br/>des cellules </legend>
-					<h2></h2>
-					<label for="MybackgroundColor">Choose a color <br/>for background:&nbsp&nbsp</label><input id="MybackgroundColor" value="#880088" type="color" />
-					</br>
-					<BR/>
-					<INPUT type="button" value="insert background color" onClick="insertCouleurBkGrnd()">
-				</fieldset>
+
+				<div id="div3">
+					<select id="Couleur">
+						<option value="red" style="background-color: red">Rouge</option>
+						<option value="green" style="background-color: green">Vert</option>
+						<option value="blue" style="background-color: blue; color : #ffffff">Bleu</option>
+						<option value="yellow" style="background-color: yellow;">Jaune</option>
+						<option value="fuchsia" style="background-color: fuchsia;">Fuchsia</option>
+						<option value="violet" style="background-color: violet;">Violet</option>
+						<option value="navy" style="background-color: navy; color : #ffffff">Navy</option>
+						<option value="aqua" style="background-color: aqua;" selected>Aqua</option>
+						<option value="olive" style="background-color: olive; color : #ffffff;" >Olive</option>
+						<option value="lime" style="background-color: lime;">Citron vert</option>
+						<option value="maroon" style="background-color: maroon; color : #ffffff">Maron</option>
+						<option value="teal" style="background-color: teal; color : #ffffff">Bleu Sarcelle</option>
+						<option value="#000000" style="background-color: #000000; color : #ffffff">Noir</option>
+						<option value="gray" style="background-color: gray; color : #ffffff">Gris</option>
+						<option value="silver" style="background-color: silver;">Gris Clair</option>
+						<option value="#ffffff" style="background-color: #ffffff">Blanc</option>
+					</select>
+					<script> redimensionneListe("Couleur") </script>
+				</div>
+				<div id="div4">
+					<select id="TailleChar" style="margin: none">
+						<option value="2" style="font-size:0.66em">Très Petite Police</option>
+						<option value="3" style="font-size:1em">Petite Police</option>
+						<option value="4" style="font-size:1.33em">Police Normal</option>
+						<option value="5" style="font-size:1.66em" selected>Font size 4 </option>
+						<option value="6" style="font-size:2em">Font size 5 </option>
+						<option value="7" style="font-size:2.33em">Font size 6 </option>
+						<option value="8" style="font-size:2.67em">Font size 7 </option>
+						<option value="9" style="font-size:3em">Font size 8 </option>
+						<option value="10" style="font-size:3.33em">Font size 9 </option>
+					</select>
+					<script> document.getElementById("TailleChar").size = document.getElementById("TailleChar").options.length *2.9; </script>
+					<script> redimensionneListe("TailleChar",2.8) </script>
+				</div>
+				</br>
 			</div>
-		</form>
+		</fieldset>
+		<fieldset id="fieldset3">
+			<legend> Couleur de Fond <br/>des cellules </legend>
+			<div>
+				<h2></h2>
+				<label for="MybackgroundColor">Choose a color <br/>for background:&nbsp&nbsp</label><input id="MybackgroundColor" value="#880088" type="color" />
+				</br>
+				<BR/>
+				<INPUT type="button" value="insert background color" onClick="insertCouleurBkGrnd()">
+			</div>
+		</fieldset>
 	</body>
 </html>
