--- a/Tableau2.html
+++ b/Tableau2.html
@@ -47,7 +47,7 @@
 				display: inline-block;
 				float: left;
 				width: 260px;
-//				height: 35px;
+				height: 180px;
 			}
 			#PutTextInTable{
 				margin-left: 5px;
@@ -261,7 +261,7 @@
 			<div>
 				<input type="text" size="6" id="Lig" placeholder="No Ligne" /> 
 				<input type="text" size="6" id="Col" placeholder="No Colonne" /> <br/><br/>
-				<textarea  rows="4" cols="28" onkeypress="if (event.keyCode==13){ MiseEnForme(); event.preventDefault(); return false; }" size="22" id="input01" placeholder="texte ou image à insérer" > </textarea>
+				<textarea  rows="4" cols="34" onkeypress="if (event.keyCode==13){ MiseEnForme(); event.preventDefault(); return false; }" size="22" id="input01" placeholder="texte ou image à insérer" > </textarea>
 			</div>
 			<div id="PutTextInTable">
 				<INPUT type="button" value="Put Text or Image in Table" onClick="MiseEnForme()">
